# ai-for-mental-health

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
docs/: PRD.md  healthcare-collaboration.md  presentation.html  presentation.md
docs/delivery/: backlog.md
src/mindwell/: __init__.py  cli.py  config.py
src/mindwell/api/: main.py
src/mindwell/api/routes/: chat.py  clinician.py  health.py  sessions.py
src/mindwell/core/: __init__.py  chat.py  risk.py  sentiment.py
src/mindwell/models/: __init__.py  database.py
src/mindwell/schemas/: __init__.py
tests/: conftest.py  test_api.py  test_risk.py  test_sentiment.py
